FIX further issues in the videos chapter

--- a/docs/de-de/modules/videos/pages/artikelstruktur.adoc
+++ b/docs/de-de/modules/videos/pages/artikelstruktur.adoc
@@ -7,9 +7,9 @@
 [cols="2, 1" grid=none]
 |===
 |Die Analogie eines Hauses mit Eltern und Kinder macht dir auf einfache Art verständlich, wie Artikel in deinem System strukturiert sind. Außerdem erhältst du Infos über die vielen Möglichkeiten, deine Artikel ins System zu bekommen.
-|<<videos/artikel/artikelstruktur-unterschied#video, Was ist der Unterschied zwischen Artikeln und Varianten? (0:20)>>
+|xref:videos:artikelstruktur-unterschied#video[Was ist der Unterschied zwischen Artikeln und Varianten? (0:20)]
 
-<<videos/artikel/artikelstruktur-importieren#video, Wie kann ich Artikeln in plentymarkets importieren? (3:43)>>
+xref:videos:artikelstruktur-importieren#video[Wie kann ich Artikeln in plentymarkets importieren? (3:43)]
 
 |===
 //end::einleitung[]
