--- a/docs/de-de/modules/videos/pages/e-mail-konto-verknuepfen.adoc
+++ b/docs/de-de/modules/videos/pages/e-mail-konto-verknuepfen.adoc
@@ -8,7 +8,7 @@
 |Um E-Mails aus dem System versenden zu können, sind nur wenige Einstellungen nötig. Bereite alles vor, damit du mit der Kundenkommunikation starten kannst.
 |xref:videos:e-mail-konto-verknuepfen-teil1.adoc#video[Verknüpfe dein E-Mail-Konto (0:29)]
 
-<<videos/grundeinstellungen/e-mail-verkehr/e-mail-konto-verknuepfen-testmodus#video, Generalprobe? Testmodus! (0:56)>>
+xref:videos:e-mail-konto-verknuepfen-testmodus#video[Generalprobe? Testmodus! (0:56)]
 
 xref:videos:e-mail-konto-verknuepfen-signatur.adoc#video[Signatur einstellen (1:26)]
 
