--- a/docs/de-de/modules/videos/pages/kassensturz.adoc
+++ b/docs/de-de/modules/videos/pages/kassensturz.adoc
@@ -11,7 +11,7 @@
 
 xref:videos:kassensturz-differenzen.adoc#video[Differenzen verbuchen (1:33)]
 
-<<videos/pos/arbeiten-mit-pos/kassensturz-beleg#video, Wo findest du den Beleg im Backend? (2:13)>>
+xref:videos:kassensturz-beleg#video[Wo findest du den Beleg im Backend? (2:13)]
 
 |===
 //end::einleitung[]
