--- a/docs/de-de/modules/videos/pages/lieferauftraege.adoc
+++ b/docs/de-de/modules/videos/pages/lieferauftraege.adoc
@@ -7,7 +7,7 @@
 [cols="2, 1" grid=none]
 |===
 |Lerne in diesem Video, wie du in plentymarkets mit wenigen Klicks Lieferaufträge anlegst und verwaltest, und wie dir Ereignisaktionen dabei deinen Arbeitsalltag noch weiter erleichtern.
-|<<videos/auftragsabwicklung/auftraege-abwickeln/lieferauftraege-was-sind-lieferauftraege#video, Was sind Lieferaufträge? (0:27)>>
+|xref:videos:lieferauftraege-was-sind-lieferauftraege#video[Was sind Lieferaufträge? (0:27)]
 
 xref:videos:lieferauftraege-grundeinstellungen.adoc#video[Auftragsbestätigung versenden (1:21)]
 
