--- a/docs/de-de/modules/videos/pages/mailboxorg.adoc
+++ b/docs/de-de/modules/videos/pages/mailboxorg.adoc
@@ -9,7 +9,7 @@
 |Deine Mitarbeiter brauchen Mailkonten? Nichts leichter als das! Schritt für Schritt erklären wir dir, wie du schnell zu einem mailbox-org-Konto kommst!
 |xref:videos:mailboxorg-neues-konto.adoc#video[Neues Mailkonto erstellen (0:30)]
 
-<<videos/grundeinstellungen/e-mail-verkehr/mailboxorg-postfach-alias#video, Postfach oder Alias? (0:42)>>
+xref:videos:mailboxorg-postfach-alias#video[Postfach oder Alias? (0:42)]
 
 xref:videos:mailboxorg-alias-konto.adoc#video[Erstelle dein Alias-Konto (2:26)]
 
