--- a/docs/de-de/modules/videos/pages/retoureneinstellungen.adoc
+++ b/docs/de-de/modules/videos/pages/retoureneinstellungen.adoc
@@ -11,7 +11,7 @@
 
 xref:videos:retoureneinstellungen-reparaturlager.adoc#video[Reparaturlager erstellen (1:43)]
 
-<<videos/auftragsabwicklung/retouren-und-storno/retoureneinstellungen-retourenanlage-durch-kunden#video, Sollen Kunden Retouren selbstständig anlegen können? (2:24)>>
+xref:videos:retoureneinstellungen-retourenanlage-durch-kunden#video[Sollen Kunden Retouren selbstständig anlegen können? (2:24)]
 
 
 |===
