--- a/docs/de-de/modules/videos/pages/vererbung.adoc
+++ b/docs/de-de/modules/videos/pages/vererbung.adoc
@@ -7,7 +7,7 @@
 [cols="2, 1" grid=none]
 |===
 |An der Hauptvariante eines Artikels hinterlegte Daten können schnell und einfach an zugehörige Varianten vererbt werden.
-|<<videos/artikel/vererbung-was#video, Was kann vererbt werden? (1:00)>>
+|xref:videos:vererbung-was#video[Was kann vererbt werden? (1:00)]
 
 xref:videos:vererbung-darstellung.adoc#video[Darstellung der Vererbung (1:37)]
 
