--- a/docs/de-de/modules/videos/pages/auftraege-stornieren.adoc
+++ b/docs/de-de/modules/videos/pages/auftraege-stornieren.adoc
@@ -7,7 +7,7 @@
 [cols="2, 1" grid=none]
 |===
 |Eine Kund:in will den Artikel doch nicht oder du musst aus anderen Gründen den Auftrag stornieren? In plentymarkets geht das ganz schnell! Mit wenigen Klicks ist eine Stornierung erledigt und du kannst dich wieder deinem Alltag widmen.
-|<<videos/auftragsabwicklung/retouren-und-storno/auftraege-stornieren-wo#video, Wo stornierst du deinen Auftrag? (0:32)>>
+|xref:videos:auftraege-stornieren-wo#video[Wo stornierst du deinen Auftrag? (0:32)]
 
 xref:videos:auftraege-stornieren-stornostatus.adoc#video[Stornostatus einstellen (1:15)]
 
