--- a/docs/de-de/modules/videos/pages/automatisierte-retourenanlage.adoc
+++ b/docs/de-de/modules/videos/pages/automatisierte-retourenanlage.adoc
@@ -7,7 +7,7 @@
 [cols="2, 1" grid=none]
 |===
 |Lege mit einem Prozess automatisch Retouren an. Importiere den Prozess in dein System, passe ihn an und du kannst loslegen. Wie genau, erfährst du in diesem Video.
-|<<videos/auftragsabwicklung/retouren-und-storno/automatisierte-retourenanlage-prozess#video, Wie funktioniert der Prozess? (0:48)>>
+|xref:videos:automatisierte-retourenanlage-prozess#video[Wie funktioniert der Prozess? (0:48)]
 
 xref:videos:automatisierte-retourenanlage-prozessindividualisierung.adoc#video[Prozess individualisieren (1:32)]
 
