--- a/docs/de-de/modules/videos/pages/einlagen-entnahmen.adoc
+++ b/docs/de-de/modules/videos/pages/einlagen-entnahmen.adoc
@@ -11,7 +11,7 @@
 
 xref:videos:einlagen-entnahmen-verbuchen.adoc#video[Einlage/Entnahme verbuchen (1:20)]
 
-<<videos/pos/arbeiten-mit-pos/einlagen-entnahmen-beleg#video, Wo findest du den Beleg im Backend? (2:19)>>
+xref:videos:einlagen-entnahmen-beleg#video[Wo findest du den Beleg im Backend? (2:19)]
 
 |===
 //end::einleitung[]
