update with new account ids

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -47,18 +47,9 @@ Zugang zu Kaufland.de einrichten:
 
 | *Anzeigename der Konfiguration*
 | Gib einen aussagekräftigen Namen für diese Kombination aus Mandant (Shop)/plentyShop und Kaufland-Konto ein. Wenn du keinen Anzeigenamen eingibst, wird automatisch der Anzeigename `Standard` gespeichert. +
-*_Tipp:_* Der Anzeigename wird nur für die Liste der Konfigurationen verwendet. Der Anzeigename dient also nur dazu, dir im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen » [Mandant öffnen]* einen besseren Überblick über die verschiedenen Konfigurationen zu geben.
+*_Tipp:_* Der Anzeigename wird nur für die Liste der Konfigurationen verwendet. Der Anzeigename dient also nur dazu, die Liste der Konfigurationen im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen » [Mandant öffnen]* übersichtlicher zu machen.
 
 image::maerkte:kaufland-anzeigename.png
-
-| *Backend-Name* +
-(*_Pflichtfeld_*)
-| Gib einen einzigartigen Namen für diese Kombination aus Mandant (Shop)/plentyShop und Kaufland-Konto ein. Der Backend-Name wird an den folgenden Stellen im System verwendet:
-
-* *_Artikelexport:_* Der Backend-Name wird in einer Spalte der CSV-Dateien exportiert.
-* *_Auftragsimport:_* An Aufträgen wird der Backend-Name in der Auftragseigenschaft mit der ID 10 als Name des Verkäuferkontos gespeichert.
-
-*_Wichtig:_* Der Backend-Name ist nach dem ersten Speichern der Konfiguration nicht mehr änderbar.
 
 | *Schnittstelle zu Kaufland.de aktivieren*
 a| * *Ja* = Schnittstelle zu Kaufland.de aktivieren. Daten werden mit Kaufland ausgetauscht.
