--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -68,12 +68,12 @@ a| * *Ja* = Schnittstelle zu Kaufland.de aktivieren. Daten werden mit Kaufland a
 *_Wichtig:_* Du musst jeden deiner Dienstleister mit einem Dienstleister aus der Dropdown-Liste verknüpfen.
 
 | *Versandbestätigungen senden über*
-| Bisher wurden Versandbestätigungen über einen stündlichen Cron an Kaufland gesendet. Dieser Cron wird aber bald abgeschaltet. Richte deshalb jetzt die Ereignisaktion <<#shipping-confirmation, Versandbestätigung an Kaufland.de senden>> ein und stelle die Option dann auf *Ereignisaktion*.
+| Bisher wurden Versandbestätigungen über einen stündlichen Cron an Kaufland gesendet. Dieser Cron wird aber Anfang Juni 2022 abgeschaltet. Richte deshalb jetzt die Ereignisaktion <<#shipping-confirmation, Versandbestätigung an Kaufland.de senden>> ein und stelle die Option dann auf *Ereignisaktion*.
 
 [cols="1,3"]
 !===
 ! *stündlichen Cron*
-! Der stündliche Cron wird bald abgeschaltet. Richte deshalb jetzt die Ereignisaktion <<#shipping-confirmation, Versandbestätigung an Kaufland.de senden>> ein. Stelle die Option *Versandbestätigungen senden über* dann auf *Ereignisaktion*.
+! Der stündliche Cron wird Anfang Juni 2022 abgeschaltet. Richte deshalb jetzt die Ereignisaktion <<#shipping-confirmation, Versandbestätigung an Kaufland.de senden>> ein. Stelle die Option *Versandbestätigungen senden über* dann auf *Ereignisaktion*.
 
 ! *Ereignisaktion* +
 (empfohlen)
