--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -66,12 +66,12 @@ a| * *Yes* = Activate the interface to Kaufland.de. +
 *_Important:_* You have to assign each of your service providers to one of the service providers from the drop-down list.
 
 | *Send shipping confirmations via*
-| Up to now, shipping confirmations were sent to Kaufland with an hourly cron. However, this cron is deactivated very soon. As such, set up the event procedure <<#shipping-confirmation, Send shipping confirmation to Kaufland.de>> now and set the option to *event procedure*.
+| Up to now, shipping confirmations were sent to Kaufland with an hourly cron. However, this cron will be deactivated at the beginning of June 2022. As such, set up the event procedure <<#shipping-confirmation, Send shipping confirmation to Kaufland.de>> now and set the option to *event procedure*.
 
 [cols="1,3"]
 !===
 ! *hourly cron*
-! The hourly cron is deactivated very soon. As such, set up the event procedure <<#shipping-confirmation, Send shipping confirmation to Kaufland.de>> now. Then set the option *Send shipping confirmations via* to *event procedure*.
+! The hourly cron will be deactivated at the beginning of June 2022. As such, set up the event procedure <<#shipping-confirmation, Send shipping confirmation to Kaufland.de>> now. Then set the option *Send shipping confirmations via* to *event procedure*.
 
 ! *Event procedure* +
 (recommended)
