Kathrin/kaufland fix (#263)
* Update kaufland-de-einrichten.adoc

* Update kaufland-de-einrichten.adoc

* Update kaufland-de-einrichten.adoc

* Update kaufland-setup.adoc

--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -177,13 +177,13 @@ Die plentymarkets Verfügbarkeits-IDs 1-10 entsprechen der im Menü *Einrichtung
 |====
 
 [#data-exchange]
-=== Informationen zum Datenaustausch
+=== Häufigkeit des Datenaustauschs
 
 Nachdem du {market} in plentymarkets eingerichtet hast, stehen die in <<#data-exchange-market>> beschriebenen automatisierten Abläufe bereit:
 
 [[data-exchange-market]]
 .Häufigkeit des Datenaustauschs
-[cols="2,3a"]
+[cols="1,3a"]
 |====
 |Daten |Intervall
 
