--- a/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
@@ -244,7 +244,7 @@ Weitere Informationen zum Debitorenkonto findest du auf der Handbuchseite xref:a
 |Welche Sprache spricht der Kontakt? +
 *_Hinweis:_* Abhängig von der gewählten Standardeinstellung im System, ist hier die Systemsprache automatisch vorausgewählt. Du kannst die Einstellung vor dem Speichern natürlich anpassen.
 
-| *Kontakt gesperrt*
+| *Kontakt sperren*
 |Wähle, ob der Kontakt für den eingestellten Mandanten gesperrt sein soll oder nicht. +
 Wenn die Option gewählt ist (icon:check_box[set=material, role=skyBlue]), ist der Kontakt gesperrt und kann sich _nicht_ mehr in deinem plentyShop einloggen. Wenn die Option nicht gewählt ist (icon:check_box_outline_blank[set=material]), kann sich der Kontakt in deinem plentyShop einloggen.
 
