--- a/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
+++ b/docs/de-de/modules/maerkte/pages/plus-gartenxxl.adoc
@@ -159,7 +159,7 @@ Verkaufspreis für Netto Marken-Discount festlegen:
 [#shipping-referrer]
 === Herkunft in Versandprofilen aktivieren
 
-:referrer: bol.com
+:referrer: Netto
 
 include::partial$shipping-profile-activate.adoc[]
 
