just noticed I almost forgot the formatting

--- a/docs/en-gb/modules/item/pages/search.adoc
+++ b/docs/en-gb/modules/item/pages/search.adoc
@@ -101,7 +101,7 @@ a|Should xref:item:structure.adoc#[items and variations] be grouped together in 
 |Enter an ID to search for the variation with this ID.
 
 | *Variation number*
-|Enter a variation number to search for the variation with this number.
+a|Enter a variation number to search for the variation with this number.
 
 *_Note_*:
 Use the character `%` to search for a partial number.
