Added info about fallback data field

--- a/docs/de-de/modules/maerkte/partials/check24-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/check24-recommended-mappings.adoc
@@ -5,8 +5,9 @@
 
 | ID
 | ja
-| * *SKU* der Variante für Check24.de +
-*_Tipp:_* Wähle die Auftragsherkunft *Check24.de*. Gib in das Feld *Konto* die Zahl `0` ein.
+| * *SKU » SKU* +
+*_Tipp:_* Wähle die Auftragsherkunft *Check24.de*. Gib in das Feld *Konto* die Zahl `0` ein. +
+*_Tipp:_* Wähle als Ausweich-Datenfeld *Variante » Varianten-ID*.
 
 | Hersteller
 | nein
