--- a/docs/en-gb/modules/markets/partials/check24-recommended-mappings.adoc
+++ b/docs/en-gb/modules/markets/partials/check24-recommended-mappings.adoc
@@ -5,8 +5,9 @@
 
 | ID
 | yes
-| * *SKU* of the variation for Check24.de +
-*_Tip:_* Select the order referrer *Check24.de*. In the field *Account*, enter the number `0`.
+| * *SKU » SKU* +
+*_Tip:_* Select the order referrer *Check24.de*. In the field *Account*, enter the number `0`. +
+*_Tip:_* Select *Variation » Variation ID* as fallback data field.
 
 | Manufacturer
 | no
