--- a/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
+++ b/docs/de-de/modules/crm/pages/vorbereitende-einstellungen.adoc
@@ -253,7 +253,7 @@ Nachdem du die Eigenschaft im Menü *Einrichtung » Einstellungen » Eigenschaft
 Eigenschaft mit dem Kontakt verknüpfen:
 
 . Öffne das Menü *CRM » Kontakte (Testphase)*.
-. Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu <<#table-search-contact>> auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
+. Suche den Kontakt anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Kontakts, um den Datensatz zu öffnen.
 . Klicke auf der linken Seite auf *Eigenschaften*. +
