--- a/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
+++ b/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
@@ -253,13 +253,11 @@ After you have created the property in the *Setup » Settings » Properties » C
 Linking the property with the contact:
 
 . Go to *CRM » Contacts (Test phase)*.
-. Search the contact by means of the filter settings. Note <<#table-search-contact>> on the xref:crm:search-contact.adoc#[Searching for a contact] page. +
+. Search the contact by means of the filter settings. Note the explanations about the filters on the xref:crm:search-contact.adoc#[Searching for a contact] page. +
 → The contacts that correspond to the search criteria entered are displayed.
 . Click in the line of the contact to open the data record.
 . Click on *Properties* on the left side. +
 → All properties that are available for the contact are displayed and you add them there.
-
- 
 
 [#properties-on-documents]
 === Showing properties on documents
