--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -49,7 +49,7 @@ Setting up the access to Kaufland.de:
 | Enter a meaningful name for this combination of a client (store)/plentyShop and a Kaufland account. If you do not enter a display name, the name `Default` is saved. +
 *_Tip:_* The display name is only used for the list of configurations. As such, the display name’s purpose is to help you better keep track of the list of configurations in the menu *Setup » Markets » Kaufland.de » Settings » [Open client]*.
 
-image::markets:kaufland-display-name.png
+image::markets:kaufland-display-name.png[]
 
 | *Activate interface to Kaufland.de*
 a| * *Yes* = Activate the interface to Kaufland.de. Data is exchanged with Kaufland.
