--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -49,7 +49,7 @@ Zugang zu Kaufland.de einrichten:
 | Gib einen aussagekräftigen Namen für diese Kombination aus Mandant (Shop)/plentyShop und Kaufland-Konto ein. Wenn du keinen Anzeigenamen eingibst, wird automatisch der Anzeigename `Standard` gespeichert. +
 *_Tipp:_* Der Anzeigename wird nur für die Liste der Konfigurationen verwendet. Der Anzeigename dient also nur dazu, die Liste der Konfigurationen im Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen » [Mandant öffnen]* übersichtlicher zu machen.
 
-image::maerkte:kaufland-anzeigename.png
+image::maerkte:kaufland-anzeigename.png[]
 
 | *Schnittstelle zu Kaufland.de aktivieren*
 a| * *Ja* = Schnittstelle zu Kaufland.de aktivieren. Daten werden mit Kaufland ausgetauscht.
