Changed description for product and offer export

--- a/docs/de-de/modules/maerkte/pages/check24.adoc
+++ b/docs/de-de/modules/maerkte/pages/check24.adoc
@@ -84,59 +84,6 @@ include::partial$zahlungsart_aktivieren.adoc[]
 * <<#catalogue-export, _Möglichkeit 2:_ Artikelexport über Katalog-Formate _(empfohlene Methode)_>>
 * <<#change-elastic-export-catalogue, _Möglichkeit 3:_ Wechsel von elastischem Export zu Katalog>>
 
-[discrete]
-=== Produkt- und Angebotsexport bei Check24
-
-Bei Check24 wird zwischen Angebotsdaten und Produktdaten unterschieden. Deswegen gibt es bei Check24 zwei verschiedene Exporte:
-
-* den Angebotsexport
-* den Produktexport.
-
-Check24 ruft Artikeldaten in regelmäßigen Abständen per URL ab. Deswegen musst du eine URL im Backend von Check24 speichern. +
-*_Hinweis:_* Wichtig zu erwähnen ist hierbei, dass es zwei verschiedene Katalog-Formate bzw. Exportformate für den elastischen Export und somit auch zwei verschiedene URLs gibt, eine URL für den Produktexport und eine URL für den Angebotsexport. Du kannst bei Check24 jedoch nur _eine_ URL speichern. Um sicherzustellen, dass alle Daten an Check24 übertragen werden, die für den Verkauf deiner Artikel benötigt werden, solltest du deshalb die URL des _Angebotsexports_ bei Check24 speichern.
-
-* <<#url-check24-katalog, So kopierst du die URL für den Angebotsexport>>, wenn du Artikeldaten per Katalog an Check24 exportierst.
-* <<#url-check24-elastischer-export, So kopierst du die URL für den Angebotsexport>>, wenn du Artikeldaten mit dem elastischen Export an Check24 exportierst.
-
-Hier findest du weitere Informationen zum Produkt- und Angebotsexport bei Check24:
-
-[.tabs]
-====
-Angebotsexport::
-+
---
-Angebotsdaten werden von Check24 per URL abgerufen. Diese URL muss direkt im Backend von Check24 gespeichert werden. Die Angebotsdaten werden dann automatisch in regelmäßigen Abständen von Check24 abgerufen. Der Angebotsexport enthält alle Daten, die Check24 benötigt, um deine Artikel dort zu verkaufen. +
-
-* Wenn du Angebotsdaten mit dem Katalog an Check24 exportierst, musst du das Katalog-Format *Check24 Offer* verwenden.
-* Wenn du Angebotsdaten mit dem elastischen Export an Check24 exportierst, musst du das Exportformat *Check24DE-Plugin* verwenden.
-
-Je nachdem, ob du Kataloge oder den elastischen Export verwendest, um Artikeldaten zu exportieren, findest du die URL an unterschiedlichen Stellen in deinem plentymarkets System.
-
-[[url-angebotsdaten-check24]]
-.URL zum Abruf von Angebotsdaten
-[cols="1,3a"]
-|====
-|Katalog |Elastischer Export
-
-| * *Daten » Kataloge » [Katalog öffnen] » Einstellungen* +
-Im Bereich *Optionen für öffentlichen Link* auf *URL kopieren* (icon:content_copy[set=material]) klicken. Die URL im Backend von Check24 speichern.
-| * *Daten » Elastischer Export » [Exportformat öffnen]* +
-Im Bereich *Einstellungen* die *URL* kopieren. Die URL im Backend von Check24 speichern.
-|====
---
- 
-Produktexport::
-+
---
-Produktdaten werden von Check24 per URL abgerufen. Dies ist jedoch nur in Ausnahmefällen und in Absprache mit Check24 möglich. Deshalb kannst du die URL zum Abruf von Produktdaten auch nicht bei Check24 speichern. +
-Wenn du dennoch Produktdaten zu Check24 exportieren möchtest, wende dich direkt an Check24.
-
-* Wenn du Produktdaten mit dem Katalog an Check24 exportieren möchtest, musst du das Katalog-Format *Check24* _oder_ *Check24 Fashion* verwenden.
-* Wenn du Produktdaten mit dem elastischen Export an Check24 exportieren möchtest, musst du das Exportformat *Check24DE Fashion* verwenden.
-
---
-====
-
 [#500]
 === _Möglichkeit 1:_ Elastischer Export _(alte Methode)_
 
@@ -370,9 +317,9 @@ gewählten Mandanten in den Formateinstellungen.
 [#url-check24-elastischer-export]
 ==== URL bei Check24 speichern
 
-Check24 ruft Angebotsdaten über eine URL ab. Damit Angebotsdaten an Check24 exportiert werden, musst du eine URL direkt bei Check24 speichern. Die Angebotsdaten werden dann automatisch in regelmäßigen Abständen von Check24 abgerufen. +
+Check24 ruft Artikeldaten über eine URL ab. Damit Artikeldaten an Check24 exportiert werden, musst du eine URL direkt bei Check24 speichern. Die Artikeldaten werden dann automatisch in regelmäßigen Abständen von Check24 abgerufen. +
 Kopiere die URL des Exportformats im Menü *Daten » Elastischer Export* und speichere sie anschließend im Backend von Check24. +
-*_Hinweis:_* Du musst die URL des Exportformats *Check24DE-Plugin* bei Check24 speichern. Dieses Exportformat enthält die Angebotsdaten, die Check24 benötigt, damit deine Artikel auf Check24 verkauft werden können.
+*_Hinweis:_* Du musst die URL des Exportformats *Check24DE-Plugin* bei Check24 speichern. Dieses Exportformat enthält die Daten, die Check24 benötigt, damit deine Artikel auf Check24 verkauft werden können.
 
 [.instruction]
 URL kopieren:
@@ -394,7 +341,17 @@ include::partial$catalogue-new-to-text.adoc[]
 [#catalogue-creation]
 ==== Katalog erstellen
 
-Artikeldaten werden über das Marktplatz-Format *Check24* zu Check24 übertragen. Um deine Artikel zu Check24 zu übertragen, erstellst du im Menü *Daten » Kataloge* den Katalog. Verknüpfe dann im Marktplatz-Format die von Check24 vorgegebenen Felder mit in plentymarkets gespeicherten Artikeldaten. Die Katalogdaten werden automatisch in regelmäßigen Abständen zu Check24 exportiert, wenn du den Katalog aktivierst.
+Artikeldaten werden über das Marktplatz-Format *Check24* zu Check24 übertragen. Um deine Artikel zu Check24 zu übertragen, erstellst du im Menü *Daten » Kataloge* den Katalog. Verknüpfe dann im Marktplatz-Format die von Check24 vorgegebenen Felder mit in plentymarkets gespeicherten Artikeldaten. 
+
+Check24 ruft die Artikeldaten über eine URL ab. Diese URL findest du in deinem Katalog für Check24 im Menü *Daten » Kataloge*. Damit deine Artikeldaten zu Check24 exportiert werden können, musst du diese <<#url-check24-katalog, URL kopieren und in deinem Konto bei Check24 speichern>>, nachdem du den Katalog erstellt hast.
+
+[TIP]
+.Katalog-Formate für Check24
+====
+Für Check24 gibt es die Katalog-Formate *Check24*, *Check24 Fashion* und *Check24 Offer*. +
+Das Format *Check24 Offer* enthält Angebotsdaten, die benötigt werden, um deine Artikel auf Check24 zu verkaufen. Um deine Artikeldaten an Check24 zu übertragen, solltest du deshalb das Katalog-Format *Check24 Offer* verwenden. +
+Die Katalog-Formate *Check24* und *Check24 Fashion* enthalten Produktdaten. Diese Formate sind jedoch veraltet und sollten nur in Ausnahmefällen und in Absprache mit Check24 genutzt werden.
+====
 
 :catalogue-template-name: Check24
 :catalogue-plugin:
@@ -417,12 +374,16 @@ include::partial$recommendation-text.adoc[]
 [.collapseBox]
 .Liste mit empfohlenen Datenfeld-Zuordnungen für Check24
 --
+*_Hinweis:_* Das Katalog-Format *Check24* ist veraltet und sollte nur in Ausnahmefällen verwendet werden. Wenn du das Format dennoch verwenden willst, wende dich an Check24. Die URL für dieses Katalog-Format muss von deinen Ansprechpartner:innen in deinem Konto bei Check24 gespeichert werden.
+
 include::partial$check24-recommended-mappings.adoc[]
 --
 
 [.collapseBox]
 .Liste mit empfohlenen Datenfeld-Zuordnungen für Check24 Offer
 --
+*_Hinweis:_* Wir empfehlen, das Katalog-Format *Check24 Offer* für den Artikeldatenexport zu verwenden.
+
 include::partial$check24offer-recommended-mappings.adoc[]
 --
 
@@ -445,9 +406,9 @@ include::partial$catalogue-settings.adoc[]
 [#url-check24-katalog]
 ==== URL bei Check24 speichern
 
-Check24 ruft Angebotsdaten über eine URL ab. Damit Angebotsdaten an Check24 exportiert werden, musst du eine URL direkt bei Check24 speichern. Die Angebotsdaten werden dann automatisch in regelmäßigen Abständen von Check24 abgerufen. +
+Check24 ruft Artikeldaten über eine URL ab. Damit Artikeldaten an Check24 exportiert werden, musst du eine URL direkt bei Check24 speichern. Die Artikeldaten werden dann automatisch in regelmäßigen Abständen von Check24 abgerufen. +
 Kopiere die URL des Katalogs im Menü *Daten » Kataloge* und speichere sie anschließend im Backend von Check24. +
-*_Hinweis:_* Du musst die URL des Katalog-Formats *Check24 Offer* bei Check24 speichern. Dieses Katalog-Format enthält die Angebotsdaten, die Check24 benötigt, damit deine Artikel auf Check24 verkauft werden können.
+*_Hinweis:_* Du musst die URL des Katalog-Formats *Check24 Offer* bei Check24 speichern. Dieses Katalog-Format enthält die Daten, die Check24 benötigt, damit deine Artikel auf Check24 verkauft werden können.
 
 [.instruction]
 URL kopieren:
